--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Kurdish SRT Editor",
-  "short_name": "Kurdish SRT",
+  "name": "SRT Editor",
+  "short_name": "SRT Editor",
   "description": "Edit SRT subtitles in Kurdish language",
-  "start_url": "./",
+  "start_url": "./Kurdish SRT Editor.html",
   "display": "standalone",
   "background_color": "#0a0b0e",
   "theme_color": "#0ea5e9",
@@ -11,12 +11,26 @@
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icons/icon-512.png", 
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-167.png",
+      "sizes": "167x167", 
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-152.png",
+      "sizes": "152x152",
       "type": "image/png"
     }
   ]
