--- a/manifest.json
+++ b/manifest.json
@@ -4,19 +4,21 @@
   "description": "Edit SRT subtitles in Kurdish language",
   "start_url": "Kurdish%20SRT%20Editor.html",
   "display": "standalone",
-  "background_color": "transparent",
+  "background_color": "#0a0b0e",
   "theme_color": "#0ea5e9",
   "orientation": "portrait",
   "icons": [
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icons/icon-512.png", 
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icons/icon-180.png",
