--- a/manifest.json
+++ b/manifest.json
@@ -9,16 +9,33 @@
   "orientation": "portrait",
   "icons": [
     {
+      "src": "web/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "web/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-512.png", 
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "web/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-180.png",
@@ -27,7 +44,7 @@
     },
     {
       "src": "icons/icon-167.png",
-      "sizes": "167x167", 
+      "sizes": "167x167",
       "type": "image/png"
     },
     {
