--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "SRT Editor",
-  "short_name": "SRT Editor",
+  "name": "Kurdish SRT Editor",
+  "short_name": "Kurdish SRT Editor",
   "description": "Edit SRT subtitles in Kurdish language",
   "start_url": "Kurdish%20SRT%20Editor.html",
   "display": "standalone",
